kubernetes/AWS/0-client/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ithust-frontend
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ithust-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25% 
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: ithust-frontend
    spec:
      containers:
      - name: ithust-frontend
        image: minhkhoi779/ithust-fronten:stable
        imagePullPolicy: Always
        resources:
          limits:
            cpu: '0.5'
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 150Mi
        ports:
        - name: frontend
          containerPort: 80
