kubernetes/AWS/0-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ithust-frontend
  namespace: production
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ithust.shop
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  type: ClusterIP
  selector:
    app: ithust-frontend
  ports:
    - name: frontend
      port: 80
      targetPort: frontend
      protocol: TCP
