kubernetes/AWS/0-client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ithust-frontend-ingress
  namespace: production
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: ithust-frontend-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "120"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "10"
    alb.ingress.kubernetes.io/listen-ports: "[{\"HTTP\": 80}, {\"HTTPS\": 443}]"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/subnets: subnet-0bfb460ed34f20faf, subnet-0d030ff4c2872dade
    alb.ingress.kubernetes.io/auth-session-cookie: session
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.type=app_cookie,stickiness.app_cookie.cookie_name=session,deregistration_delay.timeout_seconds=60
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: ithust.shop

spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: ithust-frontend
      port:
        number: 80
  tls:
    - hosts:
        - "*.ithust.shop"
  rules:
    - host: ithust.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ithust-frontend
                port:
                  number: 80
